--- a/menu/src/components/create-modal/modal.css
+++ b/menu/src/components/create-modal/modal.css
@@ -37,12 +37,12 @@
 .modal-overlay .modal-body input {
     padding: 12px;
     border: 2px solid #c6c5c5c5;
-    color: rgba(0,0,0,0.9);
+    background-color: black; /* Fundo preto */
+    color: white; /* Texto branco */
     font-size: 18px;
     line-height: 24px;
     border-radius: 12px;
     width: 100%;
-
     margin-bottom: 12px;
 }
 
@@ -57,9 +57,17 @@
     position: initial;
     width: 100%;
     margin-top: 32px;
+    color: white; /* Texto branco */
+    background-color: #3a44f8; /* Fundo azul */
+    padding: 12px;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 12px;
+    border: none;
+    cursor: pointer;
 }
 
 .modal-overlay .modal-body .btn-secondary:hover {
-    background-color: #3a44f8;
-    transform: scale(1);
+    background-color: #2c36d3;
+    transform: scale(1.05);
 }
